[package]
name = "rust-macios"
version = "0.1.0"
edition = "2021"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
description = "Apple Frameworks for Rust"
license = "MIT"

[workspace]
members = ["src/appkit/proc-macros", "src/objective_c_runtime/proc-macros"]

[dependencies]
# Macros defined in workspace
app-kit-proc-macros = { version = "0.1.0", path = "src/appkit/proc-macros" }
objective-c-runtime-proc-macros = { version = "0.1.0", path = "src/objective_c_runtime/proc-macros" }

# crates.io dependencies
objc = { version = "0.2.7", features = ["exception"] }
objc_id = "0.1.1"
libc = "0.2.126"
block = "0.1.6"
lazy_static = "1.4.0"

[dev-dependencies]
test-case = "2.1.0"
