[package]
name = "rust-macios"
version = "0.3.0"
edition = "2021"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
description = "Apple Frameworks for Rust"
license = "MIT"
keywords = ["objective-c", "macos", "ios", "cocoa"]
categories = ["api-bindings", "development-tools::ffi", "os::macos-apis"]
repository = "https://github.com/a-isaiahharvey/rust-macios"
documentation = "https://docs.rs/crate/rust-macios/"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
targets = [
    # MacOS
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    # iOS
    "aarch64-apple-ios",
    "x86_64-apple-ios",
]

[profile.release]
opt-level = 0
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


[dependencies]
# Macros defined in workspace
rust-macios-app-kit-proc-macros = { version = "0.2.2", path = "src/appkit/proc-macros" }
rust-macios-objective-c-runtime-proc-macros = { version = "0.2.2", path = "src/objective_c_runtime/proc-macros" }

# crates.io dependencies
objc = "0.2.7"
objc_id = "0.1.1"
libc = "0.2.132"
block = "0.1.6"
lazy_static = "1.4.0"
bitflags = "1.3.2"

[dev-dependencies]
test-case = "2.1.0"

[workspace]
members = ["src/appkit/proc-macros", "src/objective_c_runtime/proc-macros"]

[[example]]
name = "app_delegate"
path = "examples/appkit/app_delegate.rs"

[[example]]
name = "hello_world_window"
path = "examples/appkit/hello_world_window.rs"

[[example]]
name = "popover"
path = "examples/appkit/popover.rs"

[[example]]
name = "process_info"
path = "examples/foundation/process_info.rs"

[[example]]
name = "create_contact"
path = "examples/contacts/create_contact.rs"

[[example]]
name = "general_file_decompression"
path = "examples/compression/general_file_decompression.rs"

[[example]]
name = "identifying_parts_of_speech"
path = "examples/natural_language/identifying_parts_of_speech.rs"

[[example]]
name = "identifying_people_places_and_organizations"
path = "examples/natural_language/identifying_people_places_and_organizations.rs"

[[example]]
name = "identifying_the_language_in_text"
path = "examples/natural_language/identifying_the_language_in_text.rs"

[[example]]
name = "finding_similarities_between_pieces_of_text"
path = "examples/natural_language/finding_similarities_between_pieces_of_text.rs"

[[example]]
name = "tokenizing_natural_language_text"
path = "examples/natural_language/tokenizing_natural_language_text.rs"
