[package]
name = "app-kit-proc-macros"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.102", features = ["extra-traits"] }
quote = "1.0.21"
proc-macro2 = "1.0.47"
r3bl_rs_utils = "0.9.0"
