[package]
name = "app-kit-proc-macros"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.0", features = ["extra-traits"] }
quote = "1.0.0"
proc-macro2 = "1.0.0"
