[package]
name = "rust-macios-objective-c-runtime-proc-macros"
version = "0.2.3"
edition = "2021"
description = "Macros for Objective-C for use in Rust-MaciOS library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.103", features = ["full"] }
quote = "1.0.0"
proc-macro2 = "1.0.0"
